update APIs
